# logomotion_

./: README.md  pyproject.toml
logomotion/src/: main.py
logomotion/src/code_generator/: code_generator.py
logomotion/src/entities/: type.py
logomotion/src/entities/ast/: conditionals.py  functions.py  logocommands.py  operations.py  unknown_function.py
logomotion/src/lexer/: lexer.py
logomotion/src/parser/: command.py  globals.py  parser.py
logomotion/src/ply/: lex.py
logomotion/src/utils/: logger.py
src/entities/: preconfigured_functions.py  symbol.py  symbol_table.py  symbol_tables.py
src/entities/ast/: node.py  statementlist.py  variables.py
src/parser/: expression.py  preparser.py
src/ply/: yacc.py
src/tests/: code_generation_test.py
src/utils/: error_handler.py
