[tool.poetry]
name = "logomotion"
version = "0.1.0"
description = "Logo to Java compiler"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
invoke = "2.2.0"
black = "^22.8.0"
python-dotenv = "1.0.0"


[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
coverage = "^6.4.4"
pylint = "^2.15.0"
black = {version = "^22.8.0", allow-prereleases = true}
robotframework = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
    ^/src/ply/*
)
'''
